--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
     <div class="container">
     <nav class="navbar" style="text-rendering: geometricPrecision;">
         <ul>
-            <li><a href="thecuriosityshophome.html">Home</a></li>
-            <li><a href="thecuriosityshopabout.html">About</a></li>
-            <li><a href="thecuriosityshopservices.html">Services</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="services.html">Services</a></li>
             <li><a href="#">Contact</a></li>
             <li class="D20">
                 <img src="img/cool-d20" alt="D20" height="55px" width="55px">
