--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- Author, C. E -->
+<!-- Caiden Edwards 657 170 577 -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -89,7 +89,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="services.html">Services</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="mailto:mitchreynolds555@gmail.com">Contact</a></li>
             <li class="D20">
                 <img src="img/cool-d20" alt="D20" height="55px" width="55px">
             </li>
