--- a/index.html
+++ b/index.html
@@ -122,13 +122,13 @@
                 document.getElementById("myImg").src = "img/toughscale.jpg";
             }
             if(rannum==4){
-                document.getElementById("myImg").src = "img/shrigma.jpg";
+                document.getElementById("myImg").src = "img/shrigmaman.jpg";
             }
             if(rannum==5){
                 document.getElementById("myImg").src = "img/mermaid.jpg";
             }
             if(rannum==6){
-                document.getElementById("myImg").src = "img/cyfae.jpg";
+                document.getElementById("myImg").src = "img/cyfaery.jpg";
             }
             if(rannum==7){
                 document.getElementById("myImg").src = "img/hornelf.jpg"
